--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -500,53 +500,64 @@
      
           
      Which ever one of the two model represents real experiments is left for biological validation. however, the principle remains similar in both, the non damaged monomers are the mobile one and by their dynamics post UVC are responsible for the 20\% loss seen n experiments. The damaged monomers (regions) remain within the repair zone and are less mobile due to the attachment of repair proteins. 
-     
-\section{DNA repair}
-     
+          
 \section{Microscopic Description of DNA and Nucleusome Loss}
-  We now turn to provide a microscopic description of nucleosome loss in the ROI. For this explanation we need make the following observations and assumptions:
-  \begin{enumerate}
-  	\item histone-wrapped DNA is 3 times more probable to have damage on it than linker DNA;
-  	\item repair mechanism presence indicate damage site;
-  	\item the repair zone is roughly circular;
-  	\item the repair zone grows 3 times in area, $\sqrt{3}$ times the radius;
-  	\item repair must occur on a naked DNA, with no histones on it. 
-  	\item histones can be pushed any distance;
-  	\item histones can slide over damage sites (since they have damages on the DNA that is wrapped around them).
-  \end{enumerate}
-     With these assumptions and observations, we present a simplified 1D model which accounts for 20\% loss of histones, with no loss of DNA, in a region expanding 1.7 times its initial size. Results of simulations show that we can obtain 20\% loss of both DNA and nucleosomes due to repair protein crowding in the damage site, the extra 20\% will be attributed to nucleusome sliding, cause by exposing the damaged DNA by repair proteins.
-     
-     The first principle to take into account is that sliding histones over any point in the DNA displaces this point 100bp left or right, depending on histone sliding direction. 
-     This is because one full turn of the histone is  about 100bp long. 
-     We know that the radius of the repair zone increases in radius $\sqrt{3}$ folds. This means that the right most damage point should be translated $\sqrt{3}$ times to the right. 
+ To provide a microscopic description of nucleosome loss in the ROI, we need to state some observations and assumptions:
+ \begin{enumerate}
+ 	\itemsep0em
+ 	\item histone- wrapped DNA is 3 times more probable to be damaged by UV than the linker DNA;
+ 	\item repair mechanism presence indicate damage site;
+ 	\item the repair zone is roughly circular;
+ 	\item the repair zone grows 3 times in area, $\sqrt{3}$ times the radius;
+ 	\item repair must occur on a naked DNA, with no histones on it; 
+ 	\item histones can be pushed any distance;
+ 	\item histones can slide over damage sites (since they have damages on the DNA that is wrapped around them);
+ 	\item length of linker DNA=50bp, length of histone-wrapped DNA=150bp;
+ 	\item we consider nuclesome to be the linker + the histones as a unit.   
+ \end{enumerate}
+ With these assumptions and observations, I present a simplified 1D model which accounts for 14\% loss of histones, with no loss of DNA, in a region expanding $\sqrt{3}$ times its initial size.  In this report I show that the extra percentages of loss can be attributed to nucleosome sliding, cause by exposing the damaged DNA (unwrapping it from histones) by repair proteins.
+ 
+ The first principle to take into account is that sliding histones over any point of the DNA displaces that point 150bp left or right, depending on histone sliding direction (Figure \ref{fig:histoneSlidingSingle}). This is because one full turn of the histone is about 150bp long.This displacement is not a displacement of the point on the actual DNA, but caused by the unwinding of the DNA wrapped around the histone by rolling it.
+ 
+  \begin{figure}[H]
+  	\centering
+  	\includegraphics[width=0.7\linewidth]{histoneSlidingSingle}
+  	\caption{\tiny{\textbf{Three time points during a displacement of damage site (red star)  causes a caused by histone rolling. The displacement of the damage site is equivalent to the length of DNA wrapped on a histone. A displacement is relative to some reference point, like the origin, and does not refer to an actual motion on the DNA}}}
+  	\label{fig:histoneSlidingSingle}
+  \end{figure}
+    
+ We know that the radius of the repair zone increases $\sqrt{3}$ folds. This means that the right most damage point should be translated $\sqrt{3}$ times to the right (Figure \ref{fig:histoneSlidingMulti}). 
+ 
+ If the packed region of the DNA contains $N$ nucleosomes is $L$ (Fig \ref{fig:histoneSlidingMulti}), then to translate a point $S$, initially at $L$ to $\sqrt{3}L$, we need to displace it a distance equivalent to the total length of linker DNA in $(\sqrt{3}-1)L$. The number of times we have to slide a histone over the point $S$ is thus $(\sqrt{3}-1)N50/150=(\sqrt{3}-1)N/3$.
+ The number $(\sqrt{3}-1)N/3$ is also the number of histones transfered from the left to the right hand side of the point $S$ as it is being pushed towards $\sqrt{3}L$.
+ In the region $\sqrt{3}L$ we initially have $\sqrt{3}N$ nucleosomes. After the point $S$ has reached $\sqrt{3}L$ the region contains $N-(\sqrt{3}-1)N/3$ nucleosomes. 
+ 
+ Since the point $S$ has reached $\sqrt{3}L$, and it is a damage site, we expect to find tagged repair proteins there, and by which we determine the boundary of the ROI. Thus, the percentage of histone loss from the ROI of length $\sqrt{3}$ is
+ 
+ \begin{equation*}
+ \frac{(\sqrt{3}-1)N}{3\sqrt{3}N}=\frac{(\sqrt{3}-1)}{3\sqrt{3}} =0.14
+ \end{equation*}
+ which is independent of $N$
+ 
+  \begin{figure}[H]
+  	\centering
+  	\includegraphics[width=0.7\linewidth]{histoneSlidingMulti}
+  	\caption{\tiny{\textbf{Expansion of the ROI due to nucleusome rolling. \textbf{A}. a UV beam (transparent red) damages DNA, with the point $S$ being the rightmost damage site \textbf{B}. Repair proteins (green polygons) are recruited to the damage site and start to expose the DNA in order the repair damages. \textbf{C}. Sliding the nucleosomes to the right in order to expose damage sites, translates the point $S$ to the right until $S$ reached $sqrt{3}L$. Repair proteins are present at the new location. The presence of repair proteins in $\sqrt{3}L$ indicates the ROI's boundary (vertical dashed green line)}}}
+  	\label{fig:histoneSlidingMulti}
+  \end{figure}
+ 
+ 
+ We note further that the ratio of the linker DNA to the histone-wrapped DNA plays a roll in this calculation. If this ratio is $\alpha$, then the number of histones transfered from the left to the right hand side of $S$, and thus lost, is:
+ $(\sqrt{3}-1)N\alpha$, and the ratio to the initial number of histones is 
+ $\frac{(\sqrt{3}-1)\alpha}{\sqrt{3}}=\alpha(1-1/\sqrt{3})$. For example, if instead of 1.5 turns of DNA around a histone we have only one single turn while displacing histones, then $\alpha=0.5$, and accounts for 100 bp translation of damage points while rolling histones over them. Plugging $alpa=0.5$ in the equation above gives 21\% loss of nucleosomes from the ROI.         
+ 
+ The most general form of the equation above is given if the ratio between the final and initial radius is stated as $\beta$. In the situation above we have $\beta=\sqrt{3}L/L = \sqrt{3}$, but generally it depends on the number of damage sites and the radius of the UV beam. Thus the general expression for the loss of histones is given by 
+ \begin{equation*}
+ (1-1/\beta)\alpha
+ \end{equation*}
+ This expression allows us to calculate the loss in the case of more damage sites. 
 
-     If the packed region of the DNA contains $N$ wrapped histones is $L$, then to translate a point $s$, initially at $L$ to $\sqrt{3}L$, we need to displace it a distance equivalent to the total length of linker DNA in $(\sqrt{3}-1)L=0.732L$, which means $0.732(N-1)50bp=36.6(N-1)bp$ long. The number of times we have to slide a histone over the point $s$ is thus $36.6(N-1)/100$.
-     The number $36.6(N-1)/100$ is also the number of histones transfered from the left to the right side of the point $s$ as it is being pushed towards $\sqrt{3}L$.      
-     In the region $\sqrt{3}L$ we initially have $\sqrt{3}N$ histones. After the point $s$ has reached $\sqrt{3}L$ the region contains $N-36.6(N-1)/100$ histones. 
-     
-     Since the point $s$ reached $\sqrt{3}L$, and it is a damage site, we expect to find tagged repair proteins there, and there is where we set the boundary of the ROI. Thus, the percentage of histone loss from the ROI of length $\sqrt{3}$ is
-     \begin{equation*}
-     \frac{36.6(N-1)}{100\sqrt{3}N}
-     \end{equation*}
-     For $N$ very large, say 10,000, we can estimate the percentage of loss 
-	\begin{equation*}
-     \frac{36.6(10,000-1)}{150\sqrt{3}10,000}= 0.21
-	\end{equation*}
-     
-     
-	\begin{figure}
-	\centering
-	\includegraphics[width=0.7\linewidth]{histoneSlidingSingle}
-	\caption{Displacement of nucleusome (green) causes a displacement of damage site by DNA length equivalent to one turn od DNA wrapped on a histone. (A) the damage point (red star) initially located to the right of the nucleusoms is being displaced 100 bp right due to sliding nucleusome sliding (B)}
-	\label{fig:histoneSlidingSingle}
-	\end{figure}
-	
-	
-	\begin{figure}
-	\centering
-	\includegraphics[width=0.7\linewidth]{histoneSlidingMulti}
-	\caption{expansion of the ROI due to nucleusome sliding. \textbf{A}. a UV beam (transparent red) damages DNA, with the point $S$ being the rightmost damage site \textbf{B}. repair proteins recruited to the damage site start to expose the DNA in order the repair damages. \textbf{C}. Sliding the nucleusomes to the right to expose damages, translates the point $S$ (and any other damage site in $L$) to the right until $S$ reached $sqrt{3}L$, repair proteins are present at the new location. the presence of proteins in $\sqrt{3}L$ indicates the ROI's boundary (dashed green)}
-	\label{fig:histoneSlidingMulti}
-	\end{figure}
+ 
+	\section{DNA repair}
 	
 	\end{document}
